# SPlisHSPlasH

./: .gitignore  CITATION.cff  CMakeLists.txt  CNAME  Changelog.txt  Doxyfile  Gemfile  LICENSE  MANIFEST.in  README.md  _config.yml  setup.cfg  setup.py
Demos/DynamicBoundaryDemo/: CMakeLists.txt  main.cpp
Demos/StaticBoundaryDemo/: CMakeLists.txt  main.cpp
SPlisHSPlasH/: AnimationField.cpp  AnimationField.h  AnimationFieldSystem.cpp  AnimationFieldSystem.h  BoundaryModel.cpp  BoundaryModel.h  BoundaryModel_Akinci2012.cpp  BoundaryModel_Akinci2012.h  BoundaryModel_Bender2019.cpp  BoundaryModel_Bender2019.h  BoundaryModel_Koschier2017.cpp  BoundaryModel_Koschier2017.h  CMakeLists.txt  Common.h  DynamicRigidBody.h  Emitter.cpp  Emitter.h  EmitterSystem.cpp  EmitterSystem.h  FluidModel.cpp  FluidModel.h  NeighborhoodSearch.h  NonPressureForceBase.cpp  NonPressureForceBase.h  NonPressureForceRegistration.cpp  RigidBodyObject.h  SPHKernels.cpp  SPHKernels.h  Simulation.cpp  Simulation.h  StaticRigidBody.h  StrongCouplingBoundarySolver.cpp  StrongCouplingBoundarySolver.h  SurfaceTensionBase.cpp  SurfaceTensionBase.h  TimeManager.cpp  TimeManager.h  TimeStep.cpp  TimeStep.h  TriangleMesh.cpp  (+5 more)
SPlisHSPlasH/DFSPH/: SimulationDataDFSPH.cpp  SimulationDataDFSPH.h  TimeStepDFSPH.cpp  TimeStepDFSPH.h  TimeStepDFSPHGPU.cu  TimeStepDFSPHGPU.h
SPlisHSPlasH/Drag/: DragBase.cpp  DragBase.h  DragForce_Gissler2017.cpp  DragForce_Gissler2017.h  DragForce_Macklin2014.cpp  DragForce_Macklin2014.h
SPlisHSPlasH/Elasticity/: CholeskyAVXSolver.cpp  CholeskyAVXSolver.h  ElasticityBase.cpp  ElasticityBase.h  Elasticity_Becker2009.cpp  Elasticity_Becker2009.h  Elasticity_Kugelstadt2021.cpp  Elasticity_Kugelstadt2021.h  Elasticity_Peer2018.cpp  Elasticity_Peer2018.h
SPlisHSPlasH/ICSPH/: SimulationDataICSPH.cpp  SimulationDataICSPH.h  TimeStepICSPH.cpp  TimeStepICSPH.h
SPlisHSPlasH/IISPH/: SimulationDataIISPH.cpp  SimulationDataIISPH.h  TimeStepIISPH.cpp  TimeStepIISPH.h
SPlisHSPlasH/PBF/: SimulationDataPBF.cpp  SimulationDataPBF.h  TimeIntegration.cpp  TimeIntegration.h  TimeStepPBF.cpp  TimeStepPBF.h
SPlisHSPlasH/PCISPH/: SimulationDataPCISPH.cpp  SimulationDataPCISPH.h  TimeStepPCISPH.cpp  TimeStepPCISPH.h
SPlisHSPlasH/PF/: SimulationDataPF.cpp  SimulationDataPF.h  TimeStepPF.cpp  TimeStepPF.h
SPlisHSPlasH/SurfaceTension/: SurfaceTensionBase.cpp  SurfaceTensionBase.h  SurfaceTension_Akinci2013.cpp  SurfaceTension_Akinci2013.h  SurfaceTension_Becker2007.cpp  SurfaceTension_Becker2007.h  SurfaceTension_He2014.cpp  SurfaceTension_He2014.h  SurfaceTension_Jeske2023.cpp  SurfaceTension_Jeske2023.h  SurfaceTension_ZorillaRitter2020.cpp  SurfaceTension_ZorillaRitter2020.h  SurfaceTension_ZorillaRitter2020_EigenDecomposition.h  SurfaceTension_ZorillaRitter2020_haltonVec323.h
SPlisHSPlasH/Utilities/: AVX_math.h  CholeskyAVXSolver.cpp  CholeskyAVXSolver.h  DebugTools.cpp  DebugTools.h  GaussQuadrature.cpp  GaussQuadrature.h  MathFunctions.cpp  MathFunctions.h  MatrixFreeSolver.h  MeshImport.cpp  MeshImport.h  PoissonDiskSampling.cpp  PoissonDiskSampling.h  RegularSampling2D.cpp  RegularSampling2D.h  RegularTriangleSampling.cpp  RegularTriangleSampling.h  SDFFunctions.cpp  SDFFunctions.h  SceneLoader.cpp  SceneLoader.h  SceneParameterObjects.cpp  SceneParameterObjects.h  SceneWriter.cpp  SceneWriter.h  SimpleQuadrature.cpp  SimpleQuadrature.h  SurfaceSampling.h  Timing.cpp  Timing.h  VolumeSampling.cpp  VolumeSampling.h  WindingNumbers.cpp  WindingNumbers.h
SPlisHSPlasH/UtilitiesGPU/: Kernels.cu  Kernels.cuh
SPlisHSPlasH/Viscosity/: ViscosityBase.cpp  ViscosityBase.h  Viscosity_Bender2017.cpp  Viscosity_Bender2017.h  Viscosity_Peer2015.cpp  Viscosity_Peer2015.h  Viscosity_Peer2016.cpp  Viscosity_Peer2016.h  Viscosity_Standard.cpp  Viscosity_Standard.h  Viscosity_Takahashi2015.cpp  Viscosity_Takahashi2015.h  Viscosity_Weiler2018.cpp  Viscosity_Weiler2018.h  Viscosity_XSPH.cpp  Viscosity_XSPH.h
SPlisHSPlasH/Vorticity/: MicropolarModel_Bender2017.cpp  MicropolarModel_Bender2017.h  VorticityBase.cpp  VorticityBase.h  VorticityConfinement.cpp  VorticityConfinement.h  VorticityRefinement_Liu2021.cpp  VorticityRefinement_Liu2021.h
SPlisHSPlasH/WCSPH/: SimulationDataWCSPH.cpp  SimulationDataWCSPH.h  TimeStepWCSPH.cpp  TimeStepWCSPH.h  TimeStepWCSPHGPU.cu  TimeStepWCSPHGPU.h
Simulator/: BoundarySimulator.cpp  BoundarySimulator.h  CMakeLists.txt  DynamicBoundarySimulator.cpp  DynamicBoundarySimulator.h  Exporter.cpp  Exporter.h  ExporterRegistration.cpp  SceneConfiguration.cpp  SceneConfiguration.h  ScriptObject.cpp  ScriptObject.h  SimulatorBase.cpp  SimulatorBase.h  StaticBoundarySimulator.cpp  StaticBoundarySimulator.h  main.cpp
Simulator/Exporter/: ExporterBase.h  ParticleExporter_Partio.cpp  ParticleExporter_Partio.h  ParticleExporter_VTK.cpp  ParticleExporter_VTK.h  RigidBodyExporter_BIN.cpp  RigidBodyExporter_BIN.h  RigidBodyExporter_OBJ.cpp  RigidBodyExporter_OBJ.h  RigidBodyExporter_PLY.cpp  RigidBodyExporter_PLY.h  RigidBodyExporter_VTK.cpp  RigidBodyExporter_VTK.h  RigidBodyParticleExporter_VTK.cpp  RigidBodyParticleExporter_VTK.h
Tests/AVX/: AVXTests.cpp  (+1 more)
Utilities/: BinaryFileReaderWriter.h  CMakeLists.txt  Counting.h  FileSystem.cpp  FileSystem.h  Logger.h  OBJLoader.cpp  OBJLoader.h  PartioReaderWriter.cpp  PartioReaderWriter.h  SceneLoader.cpp  SceneLoader.h  StringTools.cpp  StringTools.h  SystemInfo.h  Timing.h  Version.h.in  VolumeIntegration.h
pySPlisHSPlasH/: BoundaryModelModule.cpp  CMakeLists.txt  DFSPHModule.cpp  DragModule.cpp  ElasticityModule.cpp  Embedded.cpp  Embedded.h  EmitterModule.cpp  ExporterModule.cpp  ExtrasModule.cpp  FluidModelModule.cpp  GUIModule.cpp  ICSPHModule.cpp  IISPHModule.cpp  NonPressureForceBaseModule.cpp  PBDModule.cpp  PBFModule.cpp  PCISPHModule.cpp  PFModule.cpp  ParameterObjectModule.cpp  RigidBodyModule.cpp  SimulationModule.cpp  StaticRigidBodyModule.cpp  SurfaceTensionModule.cpp  TimeModule.cpp  TriangleMeshModule.cpp  UtilitiesModule.cpp  ViscosityModule.cpp  VorticityModule.cpp  WCSPHModule.cpp  XSPHModule.cpp  common.h  main.cpp
(+288 files in other folders)
